[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'
[profile.release]
panic = 'unwind'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.runtime]
package = 'node-template-runtime'
path = 'runtime'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.txpool]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-transaction-pool'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.txpool-api]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-api'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[[bin]]
name = 'node-template'
path = 'src/main.rs'

[workspace]
members = ['runtime']
