[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-block-builder-runtime-api'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.sr-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.txpool-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-runtime-api'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '25b99d47832b7485082bf98232b66e0779b82713'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'node-template-runtime'
version = '2.0.0'

[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'contracts-rpc-runtime-api/std',
    'contracts/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'rstd/std',
    'runtime-io/std',
    'safe-mix/std',
    'serde',
    'sr-api/std',
    'sr-primitives/std',
    'substrate-session/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'txpool-runtime-api/std',
    'version/std',
]
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '25b99d47832b7485082bf98232b66e0779b82713'
version = '1.0.4'
