[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'contracts-rpc-runtime-api/std',
    'contracts/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'sp-std/std',
    'sp-io/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-runtime/std',
    'sp-session/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'sp-transaction-pool/std',
    'version/std',
]
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-aura'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-block-builder'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts-rpc-runtime-api'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-offchain'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-api'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-version'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'node-template-runtime'
version = '2.0.0'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '52373bfe63d49aae7a17b10b17116a3d470d30bf'
version = '1.0.4'
